Coverity analysis defect 114677: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Execution Team 2020-09-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/repl_index_build_state.h:281: UNINIT_CTOR 114677 Class member declaration for "opId".
      /src/mongo/db/repl_index_build_state.h:252: UNINIT_CTOR 114677 Non-static class member "opId" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Benety Goh
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: