SERVER-50230 fix Coverity analysis defect 114677: Uninitialized scalar field